--- a/support_tickets_pipe.conf
+++ b/support_tickets_pipe.conf
@@ -16,12 +16,26 @@ input{
     
 }
 
-
+filter {
+  date {
+    match => ["created_at", "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'"]
+    target => "created_at"
+  }
+  date {
+    match => ["resolved_at", "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'"]
+    target => "resolved_at"
+  }
+  date {
+    match => ["date_assigned", "yyyy-MM-dd'T'HH:mm:ss.SSSSSS"]
+    target => "date_assigned"
+  }
+}
 
 
 output{
 
     elasticsearch{
+
         index=>"support_tickets"
         hosts => ["localhost:9200"]
     }
